$Id$

NOTE: This is the 1.3.0 development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2012)
 - 24-Jan-2013 cek Security fix: Do not show the reason for a failed login
   (i.e. "no such user")
   Security fix: Escape HTML characters in category name.
   Security fix: Check all passed in fields (either via HTML form or via
   URL parameter) for certain malicious tags (script, embed, etc.) and
   generate fatal error if found.
 - 07-Jan-2013 cek Fixed bug [ 3560830 ] wrong params for print_not_auth
 - 07-Jan-2013 cek Fixed bug [ 3577712 ] typo in upcoming.php
 - 11-Mar-2012 cek Patch [ 3501281 ] Updated Greek translation
 - 28-Feb-2012 cek Fixed bug [ 3467051 ] Don't allow empty category names.
 - 28-Feb-2012 cek Fixed bug [ 3418570 ] Security vulnerability in saving
   user theme preference; Fix for install/index.php.  Security hole would allow
   unauthenticated users to overwrite settings.php file with arbitrary data.
 - 28-Feb-2012 cek Fixed bug [ 2970095 ] XSS vulnerability in users.php
   and 'tab' parameter.  Prevent XSRF by requiring HTTP_REFERER be same as
   WebCalendar URL.
   Original notice:
   http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2010-0637
 - 28-Feb-2012 cek Fixed HTML error in upcoming.php.
 - 08-Jul-2011 cek Fixed XSS vulnerability: malicious javascript in event
   descriptions submitted by public can do bad things (create admin account,
   delete events, etc.) when the pending event is viewed by the admin.
 - 02-Jun-2011 roj Bug [ 3307633 ] Non-static method Doc::attachmentsEnabled
 - 01-May-2011 roj Bug [ 3136643 ] php error when trying to log with wrong password. postgresql
 - 26-Apr-2011 roj Fixed pass by reference warnings when running PHP 5.3
 - 26-Apr-2011 roj Bug [ 3095745 ] Invalid table structure for MS SQL
 - 17-Apr-2011 roj Bug [ 3131513 ] View id lost when using next and previous arrows
 - 17-Apr-2011 roj Bug [ 3131543 ]Time is not displayed correctly when min = 0